--- a/app/home.html
+++ b/app/home.html
@@ -9,7 +9,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="" alt="mailand">
+      <img src="https://github.com/LilianDK/nonaco/blob/main/images/mailand.jpg" alt="mailand">
       <div class="carousel-caption">
         <h1 class="fit-head">Los Angeles</h1>
         <p>LA is always so much fun!</p>
@@ -17,11 +17,11 @@
     </div>
 
     <div class="item">
-      <img src="" alt="porto">
+      <img src="https://github.com/LilianDK/nonaco/blob/main/images/porto.jpg" alt="porto">
     </div>
 
     <div class="item">
-      <img src="" alt="venice">
+      <img src="https://github.com/LilianDK/nonaco/blob/main/images/venice.jpg" alt="venice">
     </div>
   </div>
 
