--- a/app/home.html
+++ b/app/home.html
@@ -9,19 +9,33 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/mailand.jpg" alt="A picture showing the Ambrosian Library in Milan.">
+      <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/mailand.jpg" alt="A picture showing the Ambrosian Library in Milan." height="200">
       <div class="carousel-caption">
-        <h1 class="fit-head">Los Angeles</h1>
-        <p>LA is always so much fun!</p>
+        <h1 class="fit-head">Suitability for Machine Learning</h1>
+        <p>Current advances in machine learning are affecting many jobs but only a few jobs are fully automatable using machine learning. <br>
+        <a href="https://www.aeaweb.org/articles?id=10.1257/pandp.20181019">Brynjolfsson et al (2018)</a>
+        </p>
       </div>
     </div>
 
     <div class="item">
-      <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/mailand.jpg" alt="A picture showing the Livraria Lello in Porto.">
+      <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/porto.jpg" alt="A picture showing the Livraria Lello in Porto." height="200">
+      <div class="carousel-caption">
+        <h1 class="fit-head">AI automation-augmentation paradox</h1>
+        <p>Balancing machine automation (complete automation with machines) and human-machine augmentation (human and machine working together) maximizes benefits for businesses and the society.<br>
+        <a href="https://journals.aom.org/doi/abs/10.5465/amr.2018.0072">Raisch and Krakowski (2021)</a>
+        </p>
+      </div>
     </div>
 
     <div class="item">
-      <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/venice.jpg" alt="A picture showing three doors with a graffiti in Venice.">
+      <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/venice.jpg" alt="A picture showing three doors with a graffiti in Venice." height="200">
+      <div class="carousel-caption">
+        <h1 class="fit-head">Supporting situation awareness in human-machine collaboration</h1>
+        <p>Applying methods to enhance situation awareness in human-machine collaboration is critical for this relationship to be effective.<br>
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0747563222003946">Endsley (2023)</a>
+        </p>
+      </div>
     </div>
   </div>
 
