--- a/app/footer.html
+++ b/app/footer.html
@@ -1,8 +1,12 @@
 <hr>
   
 <div class="container">
-  <p class="pull-left">Built with Shiny</p>
-  <img src="https://shiny.posit.co/images/shiny-solo.png" alt="logo" class="center-block img-responsive" width="50" style="margin-bottom: 80px;" />
+  <div class="row">
+    <div class="col text-center">Built with
+    <img src="https://shiny.posit.co/images/shiny-solo.png" alt="Shiny" class="center-block img-responsive" width="50" style="margin-bottom: 80px;" /> 
+    </div>
+  </div>
+
   
   <!-- FOOTER -->
   <footer>
