push of the day

--- a/app/footer.html
+++ b/app/footer.html
@@ -8,10 +8,44 @@
   </div>
 
   
-  <!-- FOOTER -->
-  <footer>
-  <p class="pull-right"><a href="#">Back to top</a></p>
-  <p><a href="#" data-toggle="modal" data-target="#modal-credits">Credits</a></p>
-  </footer>
-          
+<!-- FOOTER -->
+<footer>
+<p class="pull-right"><a href="#">Back to top</a></p>
+<p><a href="#" data-toggle="modal" data-target="#modal-sitenote">Site notice</a></p>
+</footer>
+
+<!-- Modal - Credits -->
+<div class="modal fade" id="modal-sitenote" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-content">
+  <div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+  <h4 class="modal-title" id="myModalLabel">Site notice</h4>
+  </div>
+  <div class="modal-body">
+    <p><b>Data privacy</b></p>
+    <p>This website is hosted as GitHub Pages website.</p>
+    <p>When a GitHub Pages site is visited, the visitor's IP address is logged and stored for security purposes, regardless of whether the visitor has signed into GitHub or not. For more information about GitHub's security practices, see <a href="https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement">GitHub Privacy Statement.</a></p>
+    <p>Besides the hosting related data collection of GitHub described before no further data collection takes place.</p>
+  
+  <p><b>Cookie usage</b></p>
+  <p>This website is programmed without cookies.</p>
+  
+  <p><b>Linked services</b></p>
+  <p>This website contains links to other services. If you follow these links, you should become aware of their terms of service.</p>
+  <p>I link to:</p>
+    <ul>
+      <li><a href="https://github.com/">GitHub</a> for documentation and source code repositories</li>
+      <li>Social media outlets: <a href="https://www.linkedin.com/">LinkedIn</a>, <a href="https://medium.com/">Medium</a></li>
+    </ul>
+    
+  </div>
+  
+  <div class="modal-footer">
+  <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+  </div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 </div>
