push of the day

--- a/app/footer.html
+++ b/app/footer.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col text-center">Built with
-    <img src="https://shiny.posit.co/images/shiny-solo.png" alt="Shiny" class="center-block img-responsive" width="50" style="margin-bottom: 80px;" /> 
+    <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/shiny-solo.png" alt="Shiny" class="center-block img-responsive" width="50" style="margin-bottom: 80px;" /> 
     </div>
   </div>
 
