--- a/app/www/home.html
+++ b/app/www/home.html
@@ -1,63 +1,11 @@
-<!-- HYPOTHESES -->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/milan.jpg" alt="A picture showing the Ambrosian Library in Milan." height="200">
-      <div class="carousel-caption">
-        <h1 class="fit-head">Suitability for Machine Learning</h1>
-        <p>Current advances in machine learning are affecting many jobs but only a few jobs are fully automatable using machine learning. <br>
-        <a href="https://www.aeaweb.org/articles?id=10.1257/pandp.20181019">Brynjolfsson et al (2018)</a>
-        </p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/porto.jpg" alt="A picture showing the Livraria Lello in Porto." height="200">
-      <div class="carousel-caption">
-        <h1 class="fit-head">AI automation-augmentation paradox</h1>
-        <p>Balancing machine automation (complete automation with machines) and human-machine augmentation (human and machine working together) maximizes benefits for businesses and the society.<br>
-        <a href="https://journals.aom.org/doi/abs/10.5465/amr.2018.0072">Raisch and Krakowski (2021)</a>
-        </p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="https://raw.githubusercontent.com/LilianDK/nonaco/main/images/venice.jpg" alt="A picture showing three doors with a graffiti in Venice." height="200">
-      <div class="carousel-caption">
-        <h1 class="fit-head">Supporting situation awareness in human-machine collaboration</h1>
-        <p>Applying methods to enhance situation awareness in human-machine collaboration is critical for this relationship to be effective.<br>
-        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0747563222003946">Endsley (2023)</a>
-        </p>
-      </div>
-    </div>
-  </div>
-  
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<!-- HYPOTHESES END -->
-
-  <!-- START THE FEATURETTES -->
+<!-- START THE FEATURETTES -->
 
 <hr class="featurette-divider">
 
 <div class="container">
   <div class="row">
     <div class="col text-center">
-      <h1 style="font-size:32px;"><b>Lilian Do khac</b></h1> 
+      <h1 style="font-size:32px;"><b>Lilian Do Khac</b></h1> 
       <br>
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
       <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
