--- a/app/www/footer.html
+++ b/app/www/footer.html
@@ -37,7 +37,7 @@
     <ul>
       <li><a href="https://github.com/">GitHub</a> for documentation and source code repositories</li>
       <li>Social media outlets: <a href="https://www.linkedin.com/">LinkedIn</a>, <a href="https://medium.com/">Medium</a></li>
-      <li>Outltes of knowledge sources and publications used: <a href="https://www.sciencedirect.com/">ScienceDirect</a>, <a href="https://www.aeaweb.org/">American Economic Association</a>, <a href="https://journals.aom.org/">Academy of Management</a> </li>
+      <li>Outltes of knowledge sources and publications used</li>
     </ul>
     
   </div>
